<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:weightSum="100">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="100"
            android:layout_weight="5">

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtComoEntry"
                android:layout_weight="45"
                android:textColor="@android:color/background_dark"
                android:background="@android:color/background_light"
                android:inputType="text"/>
        <Space
                android:layout_width="0dp"
                android:layout_weight="15"
                android:layout_height="match_parent"
        />
        <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btnComoEntry"
                android:id="@+id/btnComoEntry"
                android:layout_weight="40" style="@android:style/Holo.ButtonBar"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="100"
            android:layout_weight="5">

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtComoSearch"
                android:layout_weight="45"
                android:textColor="@android:color/background_dark"
                android:background="@android:color/background_light"
                android:inputType="text"/>
        <Space
                android:layout_width="0dp"
                android:layout_weight="15"
                android:layout_height="match_parent"
        />
        <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btnComoSearch"
                android:id="@+id/btnComoSearch"
                android:layout_weight="40" style="@android:style/Holo.ButtonBar"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="100"
            android:layout_weight="5">

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtComoDelete"
                android:layout_weight="45"
                android:textColor="@android:color/background_dark"
                android:background="@android:color/background_light"
                android:inputType="number"/>
        <Space
                android:layout_width="0dp"
                android:layout_weight="15"
                android:layout_height="match_parent"
        />
        <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btnComoDelete"
                android:id="@+id/btnComoDelete"
                android:layout_weight="40" style="@android:style/Holo.ButtonBar"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="100"
            android:layout_weight="75">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:text="@string/lblComoList"
                android:id="@+id/lblComoList"
                android:gravity="center_horizontal"/>
        <GridView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/lstComo"
                android:layout_weight="55"
                android:gravity="center"
                android:columnWidth="100dp"
                android:numColumns="auto_fit"
                android:verticalSpacing="20dp"
                android:horizontalSpacing="10dp"
                android:stretchMode="spacingWidthUniform"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:text="@string/lblComoSearch"
                android:id="@+id/lblSearch"
                android:gravity="center_horizontal"/>
        <GridView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/lstSearch"
                android:layout_weight="35"
                android:gravity="center"
                android:columnWidth="100dp"
                android:numColumns="auto_fit"
                android:verticalSpacing="24dp"
                android:horizontalSpacing="10dp"
                android:stretchMode="spacingWidthUniform"/>
    </LinearLayout>

</LinearLayout>